# lemillion

./: .gitignore  CLAUDE.md  Cargo.toml  backtest_comparison.md  calibration.json  hyperparams.json  neural_scorer.json
assets/: euromillions_202002.csv
lemillion-cli/: Cargo.toml
lemillion-cli/src/: display.rs  (+2 more)
lemillion-db/: Cargo.toml
lemillion-ensemble/: Cargo.toml  RETIRED_MODELS.md
lemillion-ensemble/src/: analysis.rs  conformal.rs  coverage.rs  display.rs  expected_value.rs  interactive.rs  lib.rs  main.rs  sampler.rs
lemillion-ensemble/src/ensemble/: bayesopt.rs  calibration.rs  consensus.rs  meta.rs  mod.rs  online.rs  stacking.rs  wasserstein.rs
lemillion-ensemble/src/features/: compute.rs  mod.rs
lemillion-ensemble/src/models/: bocpd.rs  boltzmann.rs  community.rs  compression.rs  conditional.rs  conditional_v2.rs  context_knn.rs  copula.rs  crf_joint.rs  cross_pool_position.rs  cross_te.rs  ctw.rs  cycle_model.rs  day_of_week.rs  decade_persist.rs  definetti.rs  delayed_mi.rs  diffusion.rs  dirichlet.rs  draw_order.rs  esn.rs  evt.rs  ewma.rs  forbidden_patterns.rs  gap_dynamics.rs  gap_model.rs  gnn_cooccurrence.rs  hawkes.rs  hmm.rs  hot_streak.rs  jackpot_context.rs  joint.rs  logistic.rs  mapper.rs  markov.rs  max_entropy.rs  mixture.rs  mod.rs  mod4.rs  mod4_profile.rs  (+41 more)
lemillion-ensemble/src/research/: dfa.rs  informational.rs  mathematical.rs  mod.rs  physical.rs  rqa.rs
lemillion-esn/: Cargo.toml
lemillion-esn/src/: config.rs  display.rs  encoding.rs  gridsearch.rs  lib.rs  linalg.rs  main.rs  metrics.rs  reservoir.rs  training.rs
(+7 files in other folders)
