[package]
name = "lemillion-ensemble"
version = "0.1.0"
edition = "2024"

[dependencies]
lemillion-db = { path = "../lemillion-db" }
clap = { version = "4.5.60", features = ["derive"] }
ndarray = "0.17.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indicatif = "0.18.4"
textplots = "0.8"
comfy-table = "7.2.2"
rand = "0.10.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
anyhow = "1"
