[package]
name = "lemillion-esn"
version = "0.1.0"
edition = "2024"

[dependencies]
lemillion-db = { path = "../lemillion-db" }
ndarray = "0.17.2"
sprs = "0.11"
faer = "0.24.0"
rand = "0.10.0"
rayon = "1.10"
clap = { version = "4.5.60", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
comfy-table = "7.2.2"
indicatif = "0.18.4"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
